fieldx/tests/uncompilable/stable+sync,async-tokio/priv_accessor.stderr
error[E0624]: method `foo` is private
 --> tests/uncompilable/priv_accessor.rs
  |
 8 |           #[fieldx(get(private), predicate(off))]
   |  __________________-
 9 | |         foo:    u32,
   | |___________________- private method defined here
...
   |       let _r = foo.foo();
   |                    ^^^ private method
